--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -2,40 +2,40 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-p.para,
-p.small-para {
+.para,
+.small-para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
 }
 
-p.para {
+.para {
   font-size: 22px;
 }
 
-p.small-para {
+.small-para {
   font-size: 14px;
   font-weight: 800;
 }
 
-button.button {
+.button {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
-button.confirm {
+.confirm {
   background: green;
   color: white;
   font-weight: bold;
 }
 
-div.text {
+.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
 }
 
-div.child {
+.text .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
